rewrite jei integration + add cooking pot recipe to it